// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing timepicker props test 1`] = `ReactWrapper {}`;

exports[`Testing timepicker timepciker match snapshot1 1`] = `
<Picker
  addon={[Function]}
  align={
    Object {
      "offset": Array [
        0,
        4,
      ],
      "overflow": Object {
        "adjustX": 1,
        "adjustY": 1,
      },
    }
  }
  allowEmpty={true}
  className=""
  clearText="clear"
  defaultOpen={false}
  defaultOpenValue={null}
  disabledHours={[Function]}
  disabledMinutes={[Function]}
  disabledSeconds={[Function]}
  focusOnOpen={false}
  format="HH:mm"
  hideDisabledOptions={false}
  inputClassName=""
  inputReadOnly={false}
  onAmPmChange={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClose={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onOpen={[Function]}
  placeholder="请选择时间"
  placement="bottomLeft"
  popupClassName=""
  popupStyle={Object {}}
  prefixCls="gio-time-picker"
  showHour={true}
  showMinute={true}
  showSecond={false}
  style={Object {}}
  use12Hours={false}
  value={"2011-03-05T00:00:00.000Z"}
/>
`;

exports[`Testing timepicker timepciker match snapshot2 1`] = `
<Picker
  addon={[Function]}
  align={
    Object {
      "offset": Array [
        0,
        4,
      ],
      "overflow": Object {
        "adjustX": 1,
        "adjustY": 1,
      },
    }
  }
  allowEmpty={true}
  className=""
  clearText="clear"
  defaultOpen={false}
  defaultOpenValue={null}
  disabledHours={[Function]}
  disabledMinutes={[Function]}
  disabledSeconds={[Function]}
  focusOnOpen={false}
  format="HH:mm:ss"
  hideDisabledOptions={false}
  inputClassName=""
  inputReadOnly={false}
  onAmPmChange={[Function]}
  onBlur={[Function]}
  onChange={[Function]}
  onClose={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onOpen={[Function]}
  placeholder="请选择时间"
  placement="bottomLeft"
  popupClassName=""
  popupStyle={Object {}}
  prefixCls="gio-time-picker"
  showHour={true}
  showMinute={true}
  showSecond={true}
  style={Object {}}
  use12Hours={false}
  value={"2011-03-05T00:00:00.000Z"}
/>
`;

exports[`TimePicker allowEmpty cannot allow clear when disabled 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "gio-time-picker",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "gio-time-picker-input",
          "disabled": "",
          "required": "",
          "type": "text",
          "value": "12:57:58",
        },
        "children": Array [],
        "name": "input",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "gio-time-picker-addon-icon",
            "role": "button",
          },
          "children": Array [],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "role": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "role": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "disabled": undefined,
          "required": undefined,
          "type": undefined,
          "value": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "disabled": undefined,
          "required": undefined,
          "type": undefined,
          "value": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "gio-time-picker-addon-icon",
          "role": "button",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "gio-time-picker-input",
            "disabled": "",
            "required": "",
            "type": "text",
            "value": "12:57:58",
          },
          "children": Array [],
          "name": "input",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "disabled": undefined,
            "required": undefined,
            "type": undefined,
            "value": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "disabled": undefined,
            "required": undefined,
            "type": undefined,
            "value": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "role": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "role": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`TimePicker allowEmpty should allow clear 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "gio-time-picker",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "gio-time-picker-input",
          "required": "",
          "type": "text",
          "value": "12:57:58",
        },
        "children": Array [],
        "name": "input",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "class": "gio-time-picker-addon-icon",
            "role": "button",
          },
          "children": Array [],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": Object {
            "attribs": Object {
              "aria-hidden": "true",
              "class": "gio-time-picker-clear",
              "tabindex": "0",
              "title": "clear",
              "type": "button",
            },
            "children": Array [],
            "name": "button",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": [Circular],
            "type": "tag",
            "x-attribsNamespace": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "tabindex": undefined,
              "title": undefined,
              "type": undefined,
            },
            "x-attribsPrefix": Object {
              "aria-hidden": undefined,
              "class": undefined,
              "tabindex": undefined,
              "title": undefined,
              "type": undefined,
            },
          },
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "role": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "role": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "required": undefined,
          "type": undefined,
          "value": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "required": undefined,
          "type": undefined,
          "value": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "gio-time-picker-addon-icon",
          "role": "button",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": Object {
          "attribs": Object {
            "aria-hidden": "true",
            "class": "gio-time-picker-clear",
            "tabindex": "0",
            "title": "clear",
            "type": "button",
          },
          "children": Array [],
          "name": "button",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "aria-hidden": undefined,
            "class": undefined,
            "tabindex": undefined,
            "title": undefined,
            "type": undefined,
          },
          "x-attribsPrefix": Object {
            "aria-hidden": undefined,
            "class": undefined,
            "tabindex": undefined,
            "title": undefined,
            "type": undefined,
          },
        },
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "gio-time-picker-input",
            "required": "",
            "type": "text",
            "value": "12:57:58",
          },
          "children": Array [],
          "name": "input",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "required": undefined,
            "type": undefined,
            "value": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "required": undefined,
            "type": undefined,
            "value": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "role": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "role": undefined,
        },
      },
      Object {
        "attribs": Object {
          "aria-hidden": "true",
          "class": "gio-time-picker-clear",
          "tabindex": "0",
          "title": "clear",
          "type": "button",
        },
        "children": Array [],
        "name": "button",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "gio-time-picker-addon-icon",
            "role": "button",
          },
          "children": Array [],
          "name": "span",
          "namespace": "http://www.w3.org/1999/xhtml",
          "next": [Circular],
          "parent": [Circular],
          "prev": Object {
            "attribs": Object {
              "class": "gio-time-picker-input",
              "required": "",
              "type": "text",
              "value": "12:57:58",
            },
            "children": Array [],
            "name": "input",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": [Circular],
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
              "required": undefined,
              "type": undefined,
              "value": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
              "required": undefined,
              "type": undefined,
              "value": undefined,
            },
          },
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "role": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "role": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "aria-hidden": undefined,
          "class": undefined,
          "tabindex": undefined,
          "title": undefined,
          "type": undefined,
        },
        "x-attribsPrefix": Object {
          "aria-hidden": undefined,
          "class": undefined,
          "tabindex": undefined,
          "title": undefined,
          "type": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
